--- a/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
+++ b/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
@@ -13,7 +13,7 @@
 }
 
 <div class="container-fluid bg-blue">
-    <section class="section page-top-section pb-4 wow fadeIn" data-wow-delay="0.2s">
+    <section class="section page-top-section pt-4 pb-4 wow fadeIn" data-wow-delay="0.2s">
         <div class="row">
             <div class="col-12 mt-3">
                 <h1 class="section-heading white-text mb-2">Our Work</h1>
